# HSE-C-Project--Settlers-of-Catan

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  Readme.md  index.md  main.cpp  sdl.cpp
CatanImages/: Без имени 1.odg  шаблон.xcf
Client/: Client.cpp  Client.h
Controller/: EventQueue.h  GameController.cpp  GameController.h
GUI/: GUI.h  main  sdl.cpp  sdl.cpp.orig  sdl.h
Libs/: libgrpc++.so.1
Model/: Board.cpp  Board.h  CMakeLists.txt
Model/Test/: run_tests.cpp  test.cpp  testCanBuild.cpp  testGraph.cpp  testHexes.cpp  testRoadsRecord.cpp
Network/: LocalServer.h  Makefile  catan.proto  client.cpp  client.h  game.grpc.pb.cc  game.grpc.pb.h  game.pb.cc  game.pb.h  game.proto  server.cpp  useful.h
Server/: CMakeLists.txt  Server.cpp  game.proto
Server/Protos/: game.grpc.pb.cc  game.pb.cc  game.pb.h
Utility/: EventQueue.h  random.cpp  random.h  spinlock.cpp  spinlock.h
ci/travis/: install-linux.sh
include/: Board.h  Cards.h  GameController.h
src/: Board.cpp  main.cpp
